# demo_matSolve

./: .gitmodules  CMakeLists.txt  README.md  run.bat
resources/matrices/: matrice_complexe.txt  matrice_complexe2.txt  matrice_entier.txt  matrice_entier2.txt  matrice_reelle.txt  solution_x_complexe.txt  solution_x_entier.txt  solution_x_reel.txt  vecteur_b_complexe.txt  vecteur_b_complexe2.txt  vecteur_b_reel.txt
src/: main.cpp
